# simple-date

./: .gitignore  CMakeLists.txt  README.md  build.sh
classes/: SimpleDate.cpp
headers/: SimpleDate.h
src/: simple-date-example.cpp
